--- a/New folder (22)/index.html
+++ b/New folder (22)/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <div id="game-container">
-        <div class="message" id="message1">Heyyyy beautiful!!</div>
-        <div class="message" id="message2">Do you love me?</div>
+        <div class="message" id="message1">Heyyyy beautiful!! 🌹</div>
+        <div class="message" id="message2">Wanna go for a date? ❤️</div>
         <div id="options">
             <button onclick="handleResponse(true)">Yes</button>
             <button id="noButton" onmouseover="floatButton()" onclick="handleResponse(false)">No</button>
         </div>
         <div class="message" id="message3"></div>
         <div id="popup" class="hidden">
-            🧸 🌸 🍫
+            🌟 You are my everything! 🌟
         </div>
     </div>
     <script src="script.js"></script>
